[project]
name = "hpe-rc"
version = "0.9.7.1"
description = "HPe-rc is a utility program for controlling the Uniden HomePatrol-1 Scanner."
authors = [
    {name = "Joseph W. Metcalf"}
]
license = {text = "ISC"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyserial",
]

[project.scripts]
hpe-rc = "hpe_rc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
]